ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  rules:
  - host: streaming.farhoodliquor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  jellyfin
            port:
              number: 8096
      - path: /sabnzbd/
        pathType: Prefix
        backend:
          service:
            name:  sabnzbd
            port:
              number: 80
      - path: /sonarr/
        pathType: Prefix
        backend:
          service:
            name:  sonarr
            port:
              number: 80
      - path: /radarr/
        pathType: Prefix
        backend:
          service:
            name:  radarr
            port:
              number: 80
      - path: /prowlarr/
        pathType: Prefix
        backend:
          service:
            name:  prowlarr
            port:
              number: 80
  tls:
  - hosts:
    - streaming.farhoodliquor.com
    secretName: farhoodliquor-com-cert-letsencrypt-prod
